--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -8,19 +8,18 @@ jobs:
   test_report:
     runs-on: ubuntu-latest
     steps:
-      - name: Install tools
-        run: sudo apt-get install -y ant-optional
       - name: Checkout
         uses: actions/checkout@main
-      - run: |
-          autoreconf -i .
-          ./configure
-          make check
-          ./CppUTestTests -ojunit
-          ./CppUTestExtTests -ojunit
-          cp ./scripts/generate_junit_report_ant.xml .
-          ant -f generate_junit_report_ant.xml
-
+      - run: cmake --preset=defaults -DCPPUTEST_JUNIT_REPORT=TRUE
+      - run: cmake --build cpputest_build -j
+      - run: ctest --test-dir cpputest_build
+      - name: Test Report
+        uses: dorny/test-reporter@v1
+        if: success() || failure()
+        with:
+          name: Tests
+          path: "cpputest_build/**/cpputest_*.xml"
+          reporter: java-junit
   gtest:
     runs-on: ubuntu-latest
     strategy:
