--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -8,18 +8,16 @@ jobs:
   test_report:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@main
+      - uses: actions/checkout@main
       - run: cmake --preset=defaults -DCPPUTEST_JUNIT_REPORT=TRUE
       - run: cmake --build cpputest_build -j
       - run: ctest --test-dir cpputest_build
-      - name: Test Report
-        uses: dorny/test-reporter@v1
+      - uses: actions/upload-artifact@v2
         if: success() || failure()
         with:
-          name: Tests
+          name: test-results
           path: "cpputest_build/**/cpputest_*.xml"
-          reporter: java-junit
+
   gtest:
     runs-on: ubuntu-latest
     strategy:
