--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -34,12 +34,30 @@ jobs:
           - os: ubuntu-latest
             cc: clang
             cxx: clang++
+          # Cygwin
+          - os: windows-latest
+            cc: gcc
+            cxx: g++
     runs-on: ${{ matrix.os }}
     steps:
+      - run: git config --global core.autocrlf input
+        if: ${{ startswith(matrix.os, 'windows') }}
       - name: Checkout
         uses: actions/checkout@main
       - run: brew install automake
         if: ${{ startswith(matrix.os, 'macos') }}
+      - name: Install Cygwin
+        uses: cygwin/cygwin-install-action@master
+        with:
+          platform: x86
+          packages: >
+            autoconf
+            automake
+            gcc-core
+            gcc-g++
+            libtool
+        if: ${{ startswith(matrix.os, 'windows') }}
+
       - if: ${{ matrix.cxx }}
         run: echo "CXX=${{ matrix.cxx }}" >> $GITHUB_ENV
       - if: ${{ matrix.cc }}
