--- a/.github/workflows/extended.yml
+++ b/.github/workflows/extended.yml
@@ -19,7 +19,7 @@ jobs:
           path: "cpputest_build/**/cpputest_*.xml"
 
   gtest:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         version: [15, 16, 17, 18]
